SUBDIRS=
TESTS=\
001_arithmetic.sh 001_arithmetic2.sh 001_dosinput.sh\
002_read_abden.sh 002_read_chgcar.sh 002_read_chg.sh\
002_read_res.sh 002_read_cif.sh 002_read_crinput1.sh\
002_read_crinput2.sh 002_read_crinput3.sh\
002_read_crinput4.sh 002_read_crinput5.sh\
002_read_crinput6.sh 002_read_crinput7.sh\
002_read_cube.sh 002_read_elk.sh 002_read_library.sh\
002_read_poscar_potcar.sh 002_read_poscar.sh 002_read_qeout.sh 002_read_struct.sh\
002_read_struct_sym.sh 002_read_vasp.sh 002_read_vasp2.sh 002_read_vasp3.sh\
002_read_wfn.sh 002_read_wfx.sh 002_read_xyz.sh 002_read_fchk.sh 002_read_molden.sh\
002_read_qein1.sh 002_read_qein2.sh\
002_read_dftbp1.sh 002_read_dftbp2.sh\
002_read_siesta.sh 002_read_multiple.sh 002_read_reset.sh\
002_read_newcell.sh 002_read_primitive.sh 002_read_molecule.sh\
003_wigner_bcc.sh 003_wigner_fcc_nosym1.sh 003_wigner_fcc_nosym2.sh 003_wigner_fcc.sh\
003_wigner_hcp.sh 003_wigner_sc.sh 003_wigner_hard1.sh 003_wigner_hard2.sh\
004_ewald1.sh 004_ewald2.sh\
005_write_abiconv.sh 005_write_abiprim.sh 005_write_elkconv.sh 005_write_elkprim.sh\
005_write_escher.sh 005_write_qeconv.sh 005_write_qeprim.sh 005_write_tess.sh\
005_write_vaspconv.sh 005_write_vaspprim.sh 005_write_xyz1.sh 005_write_xyz2.sh\
005_write_xyz3.sh 005_write_xyz4.sh 005_write_xyz5.sh 005_write_xyz6.sh  005_write_xyz7.sh\
005_write_gjf.sh\
005_write_gulp1.sh 005_write_gulp2.sh 005_write_obj.sh 005_write_obj2.sh\
005_write_obj3.sh 005_write_obj4.sh 005_write_obj5.sh 005_write_ply.sh 005_write_off.sh\
005_write_lammps1.sh 005_write_lammps2.sh\
005_write_fdf.sh 005_write_siesta_in.sh\
005_write_dftbp1.sh 005_write_dftbp2.sh 005_write_dftbp3.sh\
005_write_cml.sh\
006_load_abinit.sh 006_load_cast_unload.sh 006_load_chgcar.sh 006_load_chg.sh\
006_load_core_expr.sh 006_load_cube_opt1.sh 006_load_cube_opt2.sh\
006_load_cube_opt3.sh 006_load_cube.sh\
006_load_elk.sh 006_load_expression.sh 006_load_grid_grad.sh 006_load_grid_lap.sh\
006_load_pi_opts.sh 006_load_pi.sh 006_load_pro_expr.sh 006_load_promolecular.sh\
006_load_reference.sh 006_load_wfn.sh 006_load_wfn_mo.sh \
006_load_wfn_mp2.sh 006_load_wfx.sh \
006_load_fchk.sh 006_load_molden.sh \
006_load_wien_oper.sh 006_load_wien_opts.sh 006_load_wien.sh 006_load_xsf.sh \
006_load_elk_lap.sh 006_load_elk_lap2.sh 006_load_siesta_rho.sh\
006_load_dftbp1.sh 006_load_dftbp2.sh\
006_load_copy.sh 006_load_ghost1.sh 006_load_lots.sh 006_load_labels.sh\
007_point.sh\
008_line.sh\
009_plane1.sh 009_plane2.sh 009_plane3.sh\
010_cube1.sh 010_cube2.sh\
011_auto1.sh 011_auto2.sh 011_auto3.sh 011_auto4.sh 011_auto5.sh\
011_auto6.sh 011_auto7.sh 011_auto10.sh \
011_auto11.sh 011_auto12.sh 011_auto13.sh\
012_powder.sh 012_rdf.sh\
013_pointprop1.sh 013_pointprop2.sh 013_pointprop3.sh\
014_compare.sh\
015_environ.sh\
016_identify1.sh 016_identify2.sh\
017_hirshfeld.sh\
018_grid_ops.sh\
019_testrmt.sh\
020_grdvec1.sh 020_grdvec2.sh 020_grdvec3.sh 020_grdvec4.sh 020_grdvec5.sh 020_grdvec6.sh\
021_sphereintegrals1.sh 021_sphereintegrals2.sh\
022_fluxprint1.sh  022_fluxprint2.sh 022_fluxprint3.sh 022_fluxprint4.sh \
022_fluxprint5.sh 022_fluxprint6.sh\
023_basinplot1.sh 023_basinplot2.sh 023_basinplot3.sh 023_basinplot4.sh\
024_bundleplot.sh 024_bundleplot2.sh\
025_integrals1.sh 025_integrals2.sh 025_integrals3.sh 025_integrals4.sh 025_integrals5.sh\
026_nciplot1.sh 026_nciplot2.sh 026_nciplot3.sh 026_nciplot4.sh\
027_qtree1.sh\
028_xdm1.sh 028_xdm2.sh 028_xdm3.sh\
029_bader1.sh 029_bader2.sh 029_bader3.sh 029_bader4.sh 029_bader5.sh 029_bader6.sh\
030_yt1.sh 030_yt2.sh 030_yt3.sh 030_yt4.sh 030_yt5.sh 030_yt6.sh\
031_libxc1.sh\
032_stm1.sh 032_stm2.sh\
033_molcell1.sh\
034_packing.sh

