noinst_LIBRARIES=libmisc.a

libmisc_a_SOURCES= blas.f dasum.f daxpy.f ddot.f dgeco.f dgedi.f dgeev.f dgefa.f \
	dp1vlu.f dpcoef.f dpolft.f dscal.f dswap.f eispack.f idamax.f \
	lubksb.f ludcmp.f tqlgrm.f trace.f tredig.f \
	dgesvd.f dbdsqr.f dgebrd.f dgelqf.f dgeqrf.f dorgbr.f dorglq.f dormbr.f \ ## from LAPACK 3.8.0
	dlasr.f dlasv2.f dlas2.f dlasq1.f dlabrd.f dgebd2.f dgelq2.f dgeqr2.f \
	dorgl2.f dormqr.f dormlq.f dlasq2.f dlasrt.f dorm2r.f dorml2.f dlasq3.f \
	dlasq5.f disnan.f dlasq6.f dlasq4.f dlaisnan.f

