noinst_HEADERS=geom.h io.h libqhull.h mem.h merge.h poly.h qhull_a.h qset.h\
	random.h stat.h user.h

noinst_LIBRARIES=libqhull_critic.a

libqhull_critic_a_SOURCES= geom2.c geom.c global.c io.c libqhull.c mem.c \
	merge.c poly2.c poly.c qset.c random.c rboxlib.c stat.c user.c\
	usermem.c userprintf.c userprintf_rbox.c
