noinst_HEADERS=arithmetic.h cell.h debug.h delaunay.h hall_symbol.h kgrid.h kpoint.h\
	mathfunc.h niggli.h pointgroup.h primitive.h refinement.h sitesym_database.h\
	site_symmetry.h spacegroup.h spg_database.h spglib.h spin.h symmetry.h\
	tetrahedron_method.h version.h

noinst_LIBRARIES=libspglib.a

libspglib_a_SOURCES=arithmetic.c cell.c debug.c delaunay.c hall_symbol.c kgrid.c\
	kpoint.c mathfunc.c niggli.c pointgroup.c primitive.c refinement.c\
	sitesym_database.c site_symmetry.c spacegroup.c spg_database.c spglib.c\
	spglib_f.c spin.c symmetry.c test.c tetrahedron_method.c

